test/bad/sec_param.subst
{"functions":[{"paramSecrecy":[false],"returnSecrecy":[],"trusted":false},{"paramSecrecy":[false],"returnSecrecy":[],"trusted":false}],"globalsOffset":64,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":28}
{"functions":[{"paramSecrecy":[true],"returnSecrecy":[],"trusted":false},{"paramSecrecy":[false],"returnSecrecy":[],"trusted":false}],"globalsOffset":64,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":28} 